--- a/ReadWriteDiscuss/src/main/resources/static/css/style.css
+++ b/ReadWriteDiscuss/src/main/resources/static/css/style.css
@@ -65,11 +65,41 @@ input, button, select {
 button:hover {
 	cursor: pointer;
 }
+
+section {
+	background: url("/img/index.jpg"); 
+	width: 100vw;
+	min-width: 1270px;
+	height: 1440px;
+	color: white;
+}
+
+section:before {
+	content: '';
+	background: linear-gradient(darkslategray, transparent);
+	width: 100%;
+	height: 80%;
+	position: absolute;
+	top: 73.5px;
+}
+
+section h1 {
+	font-size: 3em;
+	position: absolute;
+	top: 30vh;
+	left: 50vw;
+	transform: translateX(-50%);
+	opacity: 0.9;
+	text-align: center;
+	width: 1270px;
+}
+
 /* 전체적용 끝 */
 
 /* header.jsp */
 header {
 	height: 3.5em;
+	min-width: 1270px;
 	background-color: darkslategray;
 	font-family: 'HS-Regular';
 	font-size: 21px;
@@ -80,7 +110,6 @@ header {
 }
 
 .header-container {
-	min-width: 500px;
 	width: 1270px;
 	display: flex;
 	flex-direction: row;
@@ -120,12 +149,11 @@ nav > ul > li{
 
 /* loginForm.jsp */
 .body-wrapper {
-	min-height: 72vh;
-	min-width: 500px;
+	min-width: 1270px;
+	min-height: 80vh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	padding-top: 70px;
 }
 
 .form {
@@ -133,6 +161,7 @@ nav > ul > li{
 	flex-direction: column;	
 	justify-content: center;
 	align-items: center;
+	margin-top: 70px;
 	margin-bottom: 100px;
 	padding: 25px 15px;
 	border: 1px solid darkgrey;
@@ -300,12 +329,11 @@ h3 {
 /* footer.jsp */
 footer {	
 	height: 170px;
+	min-width: 1270px;
 	background-color: darkorange;
-	opacity: 0.8;
 }
 
 .footer-container {
-	min-width: 500px;
 	width: 1270px;
 }
 /* footer.jsp 끝 */
