--- a/ReadWriteDiscuss/src/main/resources/static/css/style.css
+++ b/ReadWriteDiscuss/src/main/resources/static/css/style.css
@@ -1,4 +1,6 @@
 @charset "UTF-8";
+@import '/css/discussStyle.css';
+
 @font-face {
     font-family: 'HS-Regular';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/HS-Regular.woff') format('woff');
@@ -52,12 +54,6 @@ a {
 	text-decoration: none;
 }
 
-a:hover {
-	color: darkorange;
-	padding-bottom: 5px;
-	border-bottom: 1px solid darkorange;
-}
-
 input, button, select {
 	font-family: 'Hahmlet-SemiBold';
 }
@@ -107,6 +103,12 @@ header {
 	display: flex;
 	justify-content: center;
 	align-items: center;	
+}
+
+header a:hover {
+	color: darkorange;
+	padding-bottom: 5px;
+	border-bottom: 1px solid darkorange;
 }
 
 .header-container {
