3/29 댓글 등록 완료

--- a/ReadWriteDiscuss/src/main/resources/static/css/recordStyle.css
+++ b/ReadWriteDiscuss/src/main/resources/static/css/recordStyle.css
@@ -144,3 +144,9 @@ h2 {
 #record-regi-form input {
 	width: 580px;
 }
+
+/* /record/get.jsp */
+.record-board-wrapper > h3 {
+	color: #D93D04;
+	padding-left: 10px;
+}
