3/31 댓글수표시, 페이지선택

--- a/ReadWriteDiscuss/src/main/resources/static/css/recordStyle.css
+++ b/ReadWriteDiscuss/src/main/resources/static/css/recordStyle.css
@@ -150,3 +150,12 @@ h2 {
 	color: #D93D04;
 	padding-left: 10px;
 }
+
+.record-view button {
+	position: relative; /*임시*/
+}
+
+#record-img {
+	width: 210px;
+	height: 320px;
+}
