--- a/ReadWriteDiscuss/src/main/resources/static/css/recordStyle.css
+++ b/ReadWriteDiscuss/src/main/resources/static/css/recordStyle.css
@@ -65,6 +65,10 @@ h2 {
 	border-radius: 5px;
 }
 
+#record-board-header {
+	margin-bottom: 20px;
+}
+
 .record-board-wrapper > div {
 	margin: 15px;
 	position: relative;
@@ -75,74 +79,55 @@ h2 {
 	border-radius: 15px;
 	margin-bottom: 8px;
 	width: 750px;
-	height: 190px;
-	padding: 15px 30px;
+	height: 150px;
+	padding: 22px 22px;
 	display: flex;
 	align-items: center;
 }
 
-.record-container img {
-	width: 111px;
-	height: 180px;
-	margin-right: 30px;
+img {
+	width: 110px;
+	height: 155px;
+	margin: 0 30px;
+	border-radius: 3px;
 }
 
-.record-container a {
+#record-board-img {
+	box-shadow: -2px 2px darkgrey;
+}
+
+.record-container a, .record-view-right > h3 {
 	color: #D93D04;
-	padding-bottom: 5px;
+	margin-top: 5px;
 	border: none;
 	opacity: 0.9;
 }
 
 .record-container > div >  * {
-	margin: 5px 0;
 	padding-left: 10px;
 }
 
 .record-container > div > h3 {
-	font-size: 40px;
+	font-size: 28px;
+	padding-top: 5px;
 	padding-left: 0;
 }
 
-.record-container > div > label {
-	font-size: 18px;
-	font-family: 'CBNUJIKJI';
-}
 
 .record-container > div > span {
 	font-size: 14px;
-	font-family: 'Hahmlet-Regular';
 }
 
 .record-container > div > p {
+	margin-top: 5px;
 	padding-left: 10px;
-	font-size: 20px;
+	font-size: 17px;
+	font-family: 'SpoqaHanSansNeo-Medium';
 }
 
 .record-form {
 	width: 800px;
 	height: 700px;
-}
-
-#record-regi-form {
-	margin-top: 15px;
-}
-
-#space-between {
-	display: flex;
-	justify-content: space-between;
-}
-
-#record-regi-form > div{
-	margin: 10px 0;
-}
-
-#record-regi-form label{
-	margin-right: 5px;
-}
-
-#record-regi-form input {
-	width: 580px;
 }
 
 /* /record/get.jsp */
@@ -156,6 +141,81 @@ h2 {
 }
 
 #record-img {
+	width: 150px;
+	height: 225px;
+}
+
+.record-view-top {
+	display: flex;
+}
+
+.record-view-right {
+	position: relative;
+	top: 88px;
+}
+
+.record-view-right p {
+	font-family: 'SpoqaHanSansNeo-Medium';
+	font-size: 0.9em;
+}
+
+.record-view label{
+	display: block;
+	margin-top: 5px;
+	font-size: 0.85em;
+}
+
+.record-view-bottom > * {
+	margin: 0 24px;
+}
+
+.record-view-bottom > div > label {
+	margin: 0 8px 5px;
+	
+}
+
+.record-view-bottom textarea {
+	font-family: 'SpoqaHanSansNeo-Regular';
+	min-height: 250px;
+	border: none;
+	resize: none;
+}
+
+.record-view-button  {
+	text-align: center;
+}
+
+.record-view-left {
 	width: 210px;
-	height: 320px;
+}
+
+.record-regi-right {
+	position: relative;
+	top: 20px;
+}
+
+.record-regi-right hr {
+	margin: 8px 0;
+}
+
+.record-regi-right label {
+	display: inline-block;
+	width: 73px;
+}
+
+.record-regi-right input {
+	width: 460px;
+	padding: 5px 15px;
+	border: none;
+	border-left: 1px solid darkslategrey;;
+}
+
+.record-regi-right select {
+	padding: 5px 15px;
+	border: none;
+	border-left: 1px solid darkslategrey;;
+}
+
+.record-modify textarea {
+	border: 1px solid darkgrey;
 }
