--- a/ReadWriteDiscuss/src/main/resources/static/css/discussStyle.css
+++ b/ReadWriteDiscuss/src/main/resources/static/css/discussStyle.css
@@ -6,6 +6,10 @@
 	width: 1270px;
 }
 
+.discuss-board-wrapper {
+	width: 800px;
+}
+
 .body-wrapper-discuss a, #reply a {
 	color: darkslategrey;
 	cursor: pointer;
@@ -133,8 +137,125 @@ li.paginate-button.page-active > a{
 	color: white;
 }
 
+.discuss-view-top {
+	display: flex;
+	justify-content: space-between;
+}
+
+.discuss-view-top > div > *, .discuss-view-reply label, .discuss-form label {
+	border-right: 1px solid darkgrey;
+	padding: 0 8px;
+	height: 25px;
+}
+
+.discuss-view-top p {
+	display: inline-block;
+	width: 82px;
+}
+
+.discuss-view label {
+	display: inline-block;
+	width: 82px;
+	color: darkgrey;
+	font-size: 0.9em;
+}
+
+.discuss-view-top label:first-child {
+	border: none;
+}
+
+.discuss-view-title {
+	width: 350px !important;
+}
+
+.discuss-view-title.subject {
+	border: none;
+}
+
+.discuss-view-bottom label {
+	padding-left: 8px;
+}
+
+.discuss-view-content {
+	margin: 15px 0;
+	min-height: 250px;
+	padding: 10px;
+}
+
+.discuss-view-button {
+	display: flex;
+	justify-content: center;
+	margin: 15px 0;
+}
+
+.discuss-view-reply label {
+	border: none;
+}
+
+#reply-no-user {
+	width: 100%;
+}
+
+.discuss-view-reply input {
+	width: 550px; 
+	padding: 7px 12px;
+	border: none;
+	border-bottom: 1px solid darkgrey;
+}
+
+.discuss-view-reply button {
+	margin-left: 15px;
+	height: 30px;
+}
 
 #reply {
 	display: flex;
 	flex-direction: column;
+}
+
+#reply li {
+	border-bottom: 1px solid darkgrey;
+	padding: 8px 15px;
+}
+
+#reply > li > div > div {
+	display: flex;
+	justify-content: space-between;
+}
+
+#reply p {
+	font-size: 0.9em;
+}
+
+#reply small {
+	color: darkgrey;
+}
+
+.reply-li input {
+	width: 620px;
+	border-bottom: 1px solid darkorange;
+}
+
+.reply-li > div > div > div > button {
+	width: 40px;
+	margin-left: 0;
+}
+
+#reply-page {
+	margin: 10px 0;	
+}
+
+.discuss-form input {
+	border: none;
+	height: 28px;
+	margin-left: 8px;
+	width: 680px;
+}
+
+.discuss-form-bottom textarea {
+	width: 766px;
+}
+
+.discuss-form-bottom label {
+	border: none;
 }
