--- a/ReadWriteDiscuss/src/main/resources/static/css/style.css
+++ b/ReadWriteDiscuss/src/main/resources/static/css/style.css
@@ -45,6 +45,10 @@
 
 
 /* 전체적용 */
+html {
+	height: 100%;
+}
+
 * {
 	margin: 0;
 	padding: 0;
@@ -98,6 +102,7 @@ section h1 {
 	opacity: 0.9;
 	text-align: center;
 	width: 600px;
+	font-family: 'Hahmlet-SemiBold';
 }
 
 ul {
@@ -350,6 +355,7 @@ h3 {
 footer {	
 	height: 170px;
 	min-width: 1270px;
+	width: 100%;
 	background-color: darkorange;
 }
 
