--- a/ReadWriteDiscuss/src/main/resources/static/css/style.css
+++ b/ReadWriteDiscuss/src/main/resources/static/css/style.css
@@ -175,7 +175,7 @@ nav > ul > li{
 /* loginForm.jsp */
 .body-wrapper {
 	min-width: 1270px;
-	min-height: 80vh;
+	min-height: 89vh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -215,8 +215,8 @@ h3 {
 
 .form div label {
 	color: darkslategrey;
-	font-size: 15px;
-	margin-bottom: 8px;
+	font-size: 0.9em;
+	margin-bottom: 4px;
 	padding: 0 8px;
 }
 
@@ -353,13 +353,31 @@ h3 {
 
 /* footer.jsp */
 footer {	
-	height: 170px;
+	height: 50px;
 	min-width: 1270px;
 	width: 100%;
 	background-color: darkorange;
+	display: flex;
+	justify-content: center;
 }
 
 .footer-container {
 	width: 1270px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	color: white;
+	font-family: 'Hahmlet-SemiBold';
+}
+
+.footer-container div {
+	display: flex;
+	align-items: center;
+}
+
+.footer-container img {
+	height: 23px;
+	width: auto;
+	margin: 3px 10px 0;
 }
 /* footer.jsp 끝 */
